--- a/artifacts/configs/convex/convex.yaml
+++ b/artifacts/configs/convex/convex.yaml
@@ -7,6 +7,8 @@ mainJar: convex-core-0.7.1-jar-with-dependencies.jar
 testJar: convex-core-0.7.1-tests.jar
 #mvnOptions: -DfailIfNoTests=false -Dmaven.surefire.debug="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000"
 mvnOptions: -DfailIfNoTests=false
+packages:
+  - convex.core
 properties:
   - name: GenTestFormat#messageRoundTrip
     entryPoint: "convex.comms.GenTestFormat.messageRoundTrip(Ljava/lang/String;)V"
