--- a/artifacts/configs/rpki-commons/rpki-commons.yaml
+++ b/artifacts/configs/rpki-commons/rpki-commons.yaml
@@ -6,6 +6,8 @@ mainJar: rpki-commons-DEV.jar
 testJar: rpki-commons-DEV-tests.jar
 #mvnOptions: -DfailIfNoTests=false
 #mvnOptions: -Dmaven.surefire.debug="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000"
+packages:
+  - net.ripe.rpki.commons
 properties:
 #  - name: RoaCMSBuilderPropertyTest#buildEncodedParseCheck
 #    entryPoint: net.ripe.rpki.commons.crypto.cms.roa.RoaCMSBuilderPropertyTest.buildEncodedParseCheck(JLjava/lang/Integer;)V
